<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mister Wok</string>
    <string name="app_id">448288925317242</string>
    <string name="store_id">1</string>

    <string name="store_desc1">Delicious Chinese Food Orders To Take Out</string>
    <string name="store_desc2">The best take-out Chinese food</string>
    <string name="store_desc3">Phone Your Order In Advance For Quicker Service</string>
    <string name="store_phone_number">6102698288</string>
    <string name="store_address">3937 W Lincoln Hwy , Downingtown, PA 19335</string>

    <string name="store_address_lat">39.997182</string>
    <string name="store_address_lng">-75.742332</string>

    <string name="address_for_display">Address: %s</string>
    <string name="phone_number_for_display">Phone: %s</string>

    <string name="title_order">Order</string>
    <string name="title_menu">Menu</string>
    <string name="title_cart">Cart</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_about">About</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_login">Login</string>

    <string name="empty_item_message">No item found</string>
    <string name="exit_confirm_message">Please click BACK again to exit</string>


    <string name="dialog_item_detail_title">Select Item</string>
    <string name="dialog_item_detail_confirm">Confirm</string>
    <string name="dialog_item_detail_cancel">Cancel</string>

    <string name="dialog_create_user_title">Registration</string>
    <string name="dialog_create_user_message">Please wait for a moment</string>

    <string name="cart_tax">Tax: </string>
    <string name="cart_button_confirm">Confirm</string>

    <string name="dialog_phone_title">Thank you</string>
    <string name="dialog_phone_message">Please enter your contact phone number</string>
    <string name="dialog_phone_confirm">Confirm</string>
    <string name="dialog_phone_cancel">Cancel</string>

    <string name="dialog_thank_you_title">Thank You</string>
    <string name="dialog_thank_you_message">Thank you for ordering.\n
        It takes about 5-10 minutes. \n
        See you later :) </string>
    <string name="dialog_thank_confirm">OK</string>
    <string name="toast_item_detail_added">Added</string>
    <string name="action_call">Call</string>

    <string name="tnc_image">Images for reference only </string>
    <string name="admin_email">Email</string>
    <string name="admin_password">password</string>
    <string name="facebook">Facebook</string>


    <string name="action_received">Received</string>
    <string name="action_made">Made</string>
</resources>
