<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_desc_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_desc1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_desc_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_desc2"
                android:textColor="@color/gray_5_6"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_desc_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store_desc3"
                android:textColor="@color/gray_5_3"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:src="@drawable/mister_wok_simple_logo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/address_for_display"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/phone_number_for_display"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <fragment
            android:id="@+id/support_map_fragment"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="240dp" />

    </LinearLayout>

</ScrollView>